--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "build": "nx build",
     "build:api": "nx build api",
     "build:omnihost": "nx build frontend",
-    "test": "nx test",
+    "test": "nx run-many --all --target=test",
+    "test:ci": "nx run-many --all --target=test --skip-nx-cache",
+    "lint": "nx workspace-lint && nx run-many --target=lint --all=true",
+    "format:write": "nx format:write --base=development",
+    "format:check": "nx format:check --base=development",
     "seed": "nx run seeder:build && shx cp apps/seeder/src/constants/document.pdf ./dist/apps/seeder/assets && node ./dist/apps/seeder/main"
   },
   "private": true,
