chore: 🤖 Add Docker compose and Caddy config

--- a/.deploy/caddy/Caddyfile
+++ b/.deploy/caddy/Caddyfile
@@ -24,10 +24,10 @@
 # Refer to the Caddy docs for more information:
 # https://caddyserver.com/docs/caddyfile
 dangleterre.omnihost.app, dev.omnihost.app {
-        reverse_proxy omnihost:80
+        reverse_proxy omnihost-frontend:80
 }
 
 api.dangleterre.omnihost.app, api.dev.omnihost.app {
-        reverse_proxy api:3333
+        reverse_proxy api-frontend:3333
 }
 
