chore: 🤖 Correct typo in Caddyfile

--- a/.deploy/caddy/Caddyfile
+++ b/.deploy/caddy/Caddyfile
@@ -28,6 +28,6 @@ dangleterre.omnihost.app, dev.omnihost.app {
 }
 
 api.dangleterre.omnihost.app, api.dev.omnihost.app {
-        reverse_proxy api-frontend:3333
+        reverse_proxy omnihost-api:3333
 }
 
