--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       LINODE_STORAGE_BUCKET_ID: ${LINODE_STORAGE_BUCKET_ID}
       LINODE_STORAGE_ACCESS_KEY: ${LINODE_STORAGE_ACCESS_KEY}
       LINODE_STORAGE_SECRET_KEY: ${LINODE_STORAGE_SECRET_KEY}
-      POSTGRES_HOST: ${POSTGRES_HOST:-postgres}
+      POSTGRES_HOST: ${POSTGRES_HOST:-omnihost-postgres}
       POSTGRES_PORT: ${POSTGRES_PORT:-5432}
       POSTGRES_USER: ${POSTGRES_USER:-root}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-root}
