--- a/.deploy/caddy/Caddyfile
+++ b/.deploy/caddy/Caddyfile
@@ -23,11 +23,11 @@
 
 # Refer to the Caddy docs for more information:
 # https://caddyserver.com/docs/caddyfile
-dangleterre.omnihost.app, dev.omnihost.app {
+dev.omnihost.app {
         reverse_proxy omnihost-frontend:80
 }
 
-api.dangleterre.omnihost.app, api.dev.omnihost.app {
+api.dev.omnihost.app {
         reverse_proxy omnihost-api:3333
 }
 
