--- a/docker-compose.caddy.yml
+++ b/docker-compose.caddy.yml
@@ -1,4 +1,4 @@
-version: "3.7"
+version: '3.7'
 
 services:
   caddy:
@@ -6,8 +6,8 @@ services:
     image: caddy:alpine
     restart: unless-stopped
     ports:
-      - "80:80"
-      - "443:443"
+      - '80:80'
+      - '443:443'
     volumes:
       - $PWD/.deploy/caddy/Caddyfile:/etc/caddy/Caddyfile
       - $PWD/site:/srv
