--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "jwt-decode": "^3.1.2",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-anonymous": "^1.0.1",
