Add strict cors policy that loads allowed origin from .env

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ LINODE_STORAGE_CLUSTER_ID="<Linode Object Storage Region>"
 LINODE_STORAGE_BUCKET_ID="<Linode Object Storage Bucket Name>"
 LINODE_STORAGE_ACCESS_KEY="<Linode Object Storage Bucker Access Key>"
 LINODE_STORAGE_SECRET_KEY="<Linode Object Storage Bucker Secret Key>"
+
+JWT_SECRET=secret
+GLOBAL_CORS_ALLOWED_ORIGIN=http://localhost
