Remove nx-cloud when building the API image

--- a/.deploy/api/Dockerfile
+++ b/.deploy/api/Dockerfile
@@ -1,6 +1,10 @@
 FROM node:19-alpine as builder
 WORKDIR /app/builder
 COPY . .
+
+# Remove the nx-cloud runner in order to not have to install it as a dependency
+RUN sed -i 's+@nrwl\/nx-cloud+nx\/tasks-runners\/default+g' nx.json
+
 # Install python because Mac M1 seems to be missing it
 RUN apk --no-cache add --virtual .builds-deps build-base python3
 RUN npm i --omit=dev
