--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,7 @@ LINODE_STORAGE_BUCKET_ID="<Linode Object Storage Bucket Name>"
 LINODE_STORAGE_ACCESS_KEY="<Linode Object Storage Bucker Access Key>"
 LINODE_STORAGE_SECRET_KEY="<Linode Object Storage Bucker Secret Key>"
 
+API_SENDGRID_API_KEY="<Sendgrid API Key>"
+
 JWT_SECRET=secret
 GLOBAL_CORS_ALLOWED_ORIGIN=http://localhost
