--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
     "@nestjs/swagger": "^6.1.3",
     "@nestjs/typeorm": "^9.0.1",
     "@nrwl/angular": "15.5.2",
+    "@sentry/angular": "^7.31.1",
+    "@sentry/node": "^7.31.1",
+    "@sentry/tracing": "^7.31.1",
     "@sendgrid/mail": "^7.7.0",
     "@types/multer": "^1.4.7",
     "axios": "^1.2.0",
