--- a/.env.example
+++ b/.env.example
@@ -14,5 +14,8 @@ API_SENDGRID_API_KEY="<Sendgrid API Key>"
 API_SENTRY_DSN=""
 API_ENVIRONMENT=DEVELOPMENT
 
+FRONTEND_SENTRY_DSN=""
+FRONTEND_SENTRY_TUNNEL=
+
 JWT_SECRET=secret
 GLOBAL_CORS_ALLOWED_ORIGIN=http://localhost
