--- a/.env.example
+++ b/.env.example
@@ -17,5 +17,9 @@ API_ENVIRONMENT=DEVELOPMENT
 FRONTEND_SENTRY_DSN=""
 FRONTEND_SENTRY_TUNNEL=
 
+TUNNEL_ALLOWED_DSNs=entireDSN,anotherDsn
+TUNNEL_CORS_ALLOWED_ORIGINS=*
+TUNNEL_PORT=8080
+
 JWT_SECRET=secret
 GLOBAL_CORS_ALLOWED_ORIGIN=http://localhost
