--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,7 @@ API_ENVIRONMENT=DEVELOPMENT
 
 FRONTEND_SENTRY_DSN=""
 FRONTEND_SENTRY_TUNNEL=
+FRONTEND_ENVIRONMENT=DEVELOPMENT
 
 TUNNEL_ALLOWED_DSNs=entireDSN,anotherDsn
 TUNNEL_CORS_ALLOWED_ORIGINS=*
