Add environment variables into docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,9 @@ services:
       POSTGRES_USER: ${POSTGRES_USER:-root}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-root}
       POSTGRES_DATABASE: ${POSTGRES_DATABASE:-omnihost}
+      API_SENDGRID_API_KEY: ${API_SENDGRID_API_KEY:-''}
+      API_SENTRY_DSN: ${API_SENTRY_DSN:-''}
+      API_ENVIRONMENT: ${API_ENVIRONMENT:-DEVELOPMENT}
       GLOBAL_CORS_ALLOWED_ORIGIN: ${GLOBAL_CORS_ALLOWED_ORIGIN}
       JWT_SECRET: ${JWT_SECRET}
     networks:
