Add Sentry tracking sample rate to env variables

--- a/.env.example
+++ b/.env.example
@@ -12,9 +12,11 @@ LINODE_STORAGE_SECRET_KEY="<Linode Object Storage Bucker Secret Key>"
 
 API_SENDGRID_API_KEY="<Sendgrid API Key>"
 API_SENTRY_DSN=""
+API_SENTRY_TRACING_SAMPLE_RATE=1.0
 API_ENVIRONMENT=DEVELOPMENT
 
 FRONTEND_SENTRY_DSN=""
+FRONTEND_SENTRY_TRACING_SAMPLE_RATE=1.0
 FRONTEND_SENTRY_TUNNEL=
 FRONTEND_ENVIRONMENT=DEVELOPMENT
 
