--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,7 @@ services:
       POSTGRES_DATABASE: ${POSTGRES_DATABASE:-omnihost}
       API_SENDGRID_API_KEY: ${API_SENDGRID_API_KEY:-''}
       API_SENTRY_DSN: ${API_SENTRY_DSN:-''}
+      API_SENTRY_TRACING_SAMPLE_RATE: ${API_SENTRY_TRACING_SAMPLE_RATE:-1.0}
       API_ENVIRONMENT: ${API_ENVIRONMENT:-DEVELOPMENT}
       GLOBAL_CORS_ALLOWED_ORIGIN: ${GLOBAL_CORS_ALLOWED_ORIGIN}
       JWT_SECRET: ${JWT_SECRET}
@@ -55,6 +56,7 @@ services:
     environment:
       API_URL: ${API_URL:-https://api.dev.omnihost.app}
       FRONTEND_SENTRY_DSN: ${FRONTEND_SENTRY_DSN:-''}
+      FRONTEND_SENTRY_TRACING_SAMPLE_RATE: ${FRONTEND_SENTRY_TRACING_SAMPLE_RATE:-1.0}
       FRONTEND_SENTRY_TUNNEL: ${FRONTEND_SENTRY_TUNNEL}
       FRONTEND_ENVIRONMENT: ${FRONTEND_ENVIRONMENT:-DEVELOPMENT}
     networks:
