Add basic authentication E2E tests structure

--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "build:omnihost": "nx build frontend",
     "test": "nx run-many --all --target=test",
     "test:ci": "nx run-many --all --target=test --skip-nx-cache",
+    "e2e": "npm run e2e:open",
+    "e2e:open": "npm run e2e:frontend:open",
+    "e2e:frontend:open": "nx e2e frontend-e2e --watch --browser=chrome",
+    "e2e:ci": "nx run-many --target=e2e --all --maxParallel=5 --browser chrome",
     "lint": "nx workspace-lint && nx run-many --target=lint --all=true",
     "format:write": "nx format:write --base=development",
     "format:check": "nx format:check --base=development",
