Rename env var API_URL to FRONTEND_API_URL

--- a/.env.example
+++ b/.env.example
@@ -13,5 +13,7 @@ LINODE_STORAGE_SECRET_KEY="<Linode Object Storage Bucker Secret Key>"
 API_SENDGRID_API_KEY="<Sendgrid API Key>"
 API_ENVIRONMENT=DEVELOPMENT
 
+FRONTEND_API_URL=http://localhost:3333
+
 JWT_SECRET=secret
 GLOBAL_CORS_ALLOWED_ORIGIN=http://localhost
