Rename environment variables

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,45 @@
-POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
-POSTGRES_USER=root
-POSTGRES_PASSWORD=root
-POSTGRES_DATABASE=omnihost
+# ==========================
+# ========== API ===========
+# ==========================
 
-LINODE_PERSONAL_TOKEN="<Linode Personal Access Token>"
-LINODE_STORAGE_CLUSTER_ID="<Linode Object Storage Region>"
-LINODE_STORAGE_BUCKET_ID="<Linode Object Storage Bucket Name>"
-LINODE_STORAGE_ACCESS_KEY="<Linode Object Storage Bucker Access Key>"
-LINODE_STORAGE_SECRET_KEY="<Linode Object Storage Bucker Secret Key>"
+API_ENVIRONMENT=DEVELOPMENT
+
+API_JWT_SECRET=secret
+API_GLOBAL_CORS_ALLOWED_ORIGIN=http://localhost
+
+API_POSTGRES_HOST=localhost
+API_POSTGRES_PORT=5432
+API_POSTGRES_USER=root
+API_POSTGRES_PASSWORD=root
+API_POSTGRES_DATABASE=omnihost
+
+API_LINODE_PERSONAL_TOKEN="<Linode Personal Access Token>"
+API_LINODE_STORAGE_CLUSTER_ID="<Linode Object Storage Region>"
+API_LINODE_STORAGE_BUCKET_ID="<Linode Object Storage Bucket Name>"
+API_LINODE_STORAGE_ACCESS_KEY="<Linode Object Storage Bucker Access Key>"
+API_LINODE_STORAGE_SECRET_KEY="<Linode Object Storage Bucker Secret Key>"
 
 API_SENDGRID_API_KEY="<Sendgrid API Key>"
-API_ENVIRONMENT=DEVELOPMENT
+
+API_SENTRY_DSN=""
+API_SENTRY_TRACING_SAMPLE_RATE=1.0
+
+# ==========================
+# ======== Frontend ========
+# ==========================
+
+FRONTEND_ENVIRONMENT=DEVELOPMENT
 
 FRONTEND_API_URL=http://localhost:3333
 
-JWT_SECRET=secret
-GLOBAL_CORS_ALLOWED_ORIGIN=http://localhost
+FRONTEND_SENTRY_DSN=""
+FRONTEND_SENTRY_TRACING_SAMPLE_RATE=1.0
+FRONTEND_SENTRY_TUNNEL=
+
+# ==========================
+# ====== Sentry Tunnel =====
+# ==========================
+
+TUNNEL_ALLOWED_DSNs=entireDSN,anotherDsn
+TUNNEL_CORS_ALLOWED_ORIGINS=*
+TUNNEL_PORT=8080
