--- a/.env.example
+++ b/.env.example
@@ -43,3 +43,9 @@ FRONTEND_SENTRY_TUNNEL=
 TUNNEL_ALLOWED_DSNs=entireDSN,anotherDsn
 TUNNEL_CORS_ALLOWED_ORIGINS=*
 TUNNEL_PORT=8080
+
+# ==========================
+# ======= Deployment =======
+# ==========================
+
+DEVELOPMENT_ENV=TEST
