Add sentry tunnel to docker hub images

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -92,6 +92,7 @@ services:
 
   sentry-tunnel:
     container_name: omnihost-sentry-tunnel
+    image: omnihost/dangleterre:tunnel-${DEPLOYMENT_ENV:-local}
     restart: unless-stopped
     build:
       context: .
