update vscode settings because out here we do not gitignore it

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["Checkin", "Datetime", "Longterm", "nestjs", "Omnihost"]
+  "cSpell.words": [
+    "Aquaman",
+    "Checkin",
+    "Datetime",
+    "Longterm",
+    "nestjs",
+    "Omnihost"
+  ]
 }
