--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,3 @@
 {
-  "cSpell.words": [
-    "Aquaman",
-    "Checkin",
-    "Datetime",
-    "Longterm",
-    "nestjs",
-    "Omnihost",
-    "uuidv"
-  ]
+  "cSpell.words": ["Aquaman", "Checkin", "Datetime", "Longterm", "nestjs", "Omnihost", "uuidv"]
 }
