--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "lint": "nx workspace-lint && nx run-many --target=lint --all=true",
     "format:write": "nx format:write --base=development",
     "format:check": "nx format:check --base=development",
-    "seed": "nx run seeder:build && shx cp apps/seeder/src/constants/document.pdf ./dist/apps/seeder/assets && shx cp apps/seeder/src/constants/IMG_9549.jpg ./dist/apps/seeder/assets && node ./dist/apps/seeder/main"
+    "seed": "nx run seeder:build && node ./dist/apps/seeder/main"
   },
   "private": true,
   "dependencies": {
