--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -37,7 +37,7 @@ jobs:
     steps:
       - name: Log inputs
         run: |
-          echo "Branch - $GITHUB_REF"
+          echo "Branch - $GITHUB_REF##*/"
           echo "Environment - ${{ inputs.environment }}"
           echo "DeployApi - ${{ inputs.deployApi }}"
           echo "DeployFrontend - ${{ inputs.deployFrontend }}"
