Add manager password env variable

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,8 @@ API_ENVIRONMENT=DEVELOPMENT
 API_JWT_SECRET=secret
 API_GLOBAL_CORS_ALLOWED_ORIGIN=http://localhost
 
+API_MANAGER_PASSWORD=abcDEF123
+
 API_POSTGRES_HOST=localhost
 API_POSTGRES_PORT=5432
 API_POSTGRES_USER=root
