Add API_PEPPER_SECRET env variable

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@
 API_ENVIRONMENT=DEVELOPMENT
 
 API_JWT_SECRET=secret
+API_PEPPER_SECRET=secret
 API_GLOBAL_CORS_ALLOWED_ORIGIN=http://localhost
 
 API_POSTGRES_HOST=localhost
