--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,7 @@ services:
       API_POSTGRES_DATABASE: ${API_POSTGRES_DATABASE:-omnihost}
       API_GLOBAL_CORS_ALLOWED_ORIGIN: ${API_GLOBAL_CORS_ALLOWED_ORIGIN}
       API_JWT_SECRET: ${API_JWT_SECRET}
+      API_PEPPER_SECRET: ${API_PEPPER_SECRET}
       API_SENDGRID_API_KEY: ${API_SENDGRID_API_KEY:-''}
       API_SENTRY_DSN: ${API_SENTRY_DSN:-''}
       API_SENTRY_TRACING_SAMPLE_RATE: ${API_SENTRY_TRACING_SAMPLE_RATE:-1.0}
