--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@
 API_ENVIRONMENT=DEVELOPMENT
 
 API_JWT_SECRET=secret
-API_GLOBAL_CORS_ALLOWED_ORIGIN=http://localhost
+API_GLOBAL_CORS_ALLOWED_ORIGIN="http://localhost:4200,http://localhost:4300"
 
 API_MANAGER_PASSWORD=abcDEF123
 
