--- a/package.json
+++ b/package.json
@@ -45,15 +45,16 @@
     "@nestjs/swagger": "^6.1.3",
     "@nestjs/typeorm": "^9.0.1",
     "@nrwl/angular": "15.5.2",
+    "@sendgrid/mail": "^7.7.0",
     "@sentry/angular": "^7.33.0",
     "@sentry/node": "^7.33.0",
     "@sentry/tracing": "^7.33.0",
-    "@sendgrid/mail": "^7.7.0",
     "@types/multer": "^1.4.7",
     "axios": "^1.2.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "file-saver": "^2.0.5",
     "jwt-decode": "^3.1.2",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
@@ -88,6 +89,7 @@
     "@nrwl/workspace": "15.5.2",
     "@types/cron": "^2.0.0",
     "@types/express": "^4.17.14",
+    "@types/file-saver": "^2.0.5",
     "@types/jest": "28.1.1",
     "@types/node": "18.7.1",
     "@types/passport-anonymous": "^1.0.3",
