--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -26,7 +26,7 @@ on:
         description: Which environment to deploy to
         options:
           - test
-          - staging
+          - development
           - demo
 
 jobs:
