--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "@nestjs/schedule": "^2.1.0",
     "@nestjs/swagger": "^6.1.3",
     "@nestjs/typeorm": "^9.0.1",
-    "@nrwl/angular": "15.5.2",
     "@sendgrid/mail": "^7.7.0",
     "@sentry/angular": "^7.33.0",
     "@sentry/node": "^7.33.0",
@@ -67,10 +66,13 @@
     "tslib": "^2.3.0",
     "typeorm": "^0.3.10",
     "uuid": "^9.0.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "@nx/angular": "16.0.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~14.2.0",
+    "@angular-devkit/core": "~14.2.0",
+    "@angular-devkit/schematics": "~14.2.0",
     "@angular-eslint/eslint-plugin": "~14.0.4",
     "@angular-eslint/eslint-plugin-template": "~14.0.4",
     "@angular-eslint/template-parser": "~14.0.4",
@@ -79,37 +81,37 @@
     "@angular/language-service": "~14.2.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
-    "@nrwl/cli": "15.5.2",
-    "@nrwl/cypress": "15.5.2",
-    "@nrwl/eslint-plugin-nx": "15.5.2",
-    "@nrwl/jest": "15.5.2",
-    "@nrwl/linter": "15.5.2",
-    "@nrwl/nest": "15.5.2",
-    "@nrwl/node": "15.5.2",
-    "@nrwl/nx-cloud": "^15.0.2",
-    "@nrwl/workspace": "15.5.2",
+    "@nx/cypress": "16.0.1",
+    "@nx/eslint-plugin": "16.0.1",
+    "@nx/jest": "16.0.1",
+    "@nx/linter": "16.0.1",
+    "@nx/nest": "16.0.1",
+    "@nx/node": "16.0.1",
+    "@nx/workspace": "16.0.1",
+    "@schematics/angular": "~14.2.0",
     "@types/cron": "^2.0.0",
     "@types/express": "^4.17.14",
     "@types/file-saver": "^2.0.5",
-    "@types/jest": "28.1.1",
+    "@types/jest": "29.4.4",
     "@types/node": "18.7.1",
     "@types/passport-anonymous": "^1.0.3",
     "@types/passport-jwt": "^3.0.7",
     "@types/passport-local": "^1.0.34",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
+    "@typescript-eslint/eslint-plugin": "5.59.2",
+    "@typescript-eslint/parser": "5.59.2",
     "cypress": "^10.7.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "jest": "28.1.1",
-    "jest-environment-jsdom": "28.1.1",
-    "jest-preset-angular": "~12.2.2",
-    "nx": "15.5.2",
+    "jest": "29.4.3",
+    "jest-environment-jsdom": "29.4.3",
+    "jest-preset-angular": "13.0.0",
+    "nx": "16.0.1",
+    "nx-cloud": "16.0.5",
     "prettier": "^2.6.2",
     "shx": "^0.3.4",
-    "ts-jest": "28.0.5",
+    "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~4.8.2"
+    "typescript": "4.9.5"
   }
 }
