--- a/nx.json
+++ b/nx.json
@@ -40,17 +40,17 @@
     "packageManager": "npm"
   },
   "generators": {
-    "@nx/angular:application": {
+    "@nrwl/angular:application": {
       "style": "scss",
       "linter": "eslint",
       "unitTestRunner": "jest",
       "e2eTestRunner": "cypress"
     },
-    "@nx/angular:library": {
+    "@nrwl/angular:library": {
       "linter": "eslint",
       "unitTestRunner": "jest"
     },
-    "@nx/angular:component": {
+    "@nrwl/angular:component": {
       "style": "scss"
     }
   },
