--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~15.2.0",
-    "@angular/cdk": "^15.2.0",
-    "@angular/common": "~15.2.0",
-    "@angular/compiler": "~15.2.0",
-    "@angular/core": "~15.2.0",
-    "@angular/forms": "~15.2.0",
-    "@angular/material": "^15.2.0",
-    "@angular/platform-browser": "~15.2.0",
-    "@angular/platform-browser-dynamic": "~15.2.0",
-    "@angular/router": "~15.2.0",
+    "@angular/animations": "~14.2.0",
+    "@angular/cdk": "^14.2.7",
+    "@angular/common": "~14.2.0",
+    "@angular/compiler": "~14.2.0",
+    "@angular/core": "~14.2.0",
+    "@angular/forms": "~14.2.0",
+    "@angular/material": "^14.2.7",
+    "@angular/platform-browser": "~14.2.0",
+    "@angular/platform-browser-dynamic": "~14.2.0",
+    "@angular/router": "~14.2.0",
     "@aws-sdk/client-s3": "^3.223.0",
     "@nestjs/axios": "^1.0.0",
     "@nestjs/common": "^9.0.0",
@@ -44,7 +44,7 @@
     "@nestjs/schedule": "^2.1.0",
     "@nestjs/swagger": "^6.1.3",
     "@nestjs/typeorm": "^9.0.1",
-    "@nx/angular": "16.0.1",
+    "@nrwl/angular": "16.0.1",
     "@sendgrid/mail": "^7.7.0",
     "@sentry/angular": "^7.33.0",
     "@sentry/node": "^7.33.0",
@@ -70,15 +70,15 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~15.2.0",
-    "@angular-devkit/core": "~15.2.0",
-    "@angular-devkit/schematics": "~15.2.0",
-    "@angular-eslint/eslint-plugin": "~15.2.0",
-    "@angular-eslint/eslint-plugin-template": "~15.2.0",
-    "@angular-eslint/template-parser": "~15.2.0",
-    "@angular/cli": "~15.2.0",
-    "@angular/compiler-cli": "~15.2.0",
-    "@angular/language-service": "~15.2.0",
+    "@angular-devkit/build-angular": "~14.2.0",
+    "@angular-devkit/core": "~14.2.0",
+    "@angular-devkit/schematics": "~14.2.0",
+    "@angular-eslint/eslint-plugin": "~14.0.4",
+    "@angular-eslint/eslint-plugin-template": "~14.0.4",
+    "@angular-eslint/template-parser": "~14.0.4",
+    "@angular/cli": "~14.2.0",
+    "@angular/compiler-cli": "~14.2.0",
+    "@angular/language-service": "~14.2.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@nx/cypress": "16.0.1",
@@ -88,7 +88,7 @@
     "@nx/nest": "16.0.1",
     "@nx/node": "16.0.1",
     "@nx/workspace": "16.0.1",
-    "@schematics/angular": "~15.2.0",
+    "@schematics/angular": "~14.2.0",
     "@types/cron": "^2.0.0",
     "@types/express": "^4.17.14",
     "@types/file-saver": "^2.0.5",
