Add the dependency that wasn't needed before

--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@nx/cypress": "16.0.1",
+    "@nrwl/eslint-plugin-nx": "16.0.3",
     "@nx/eslint-plugin": "16.0.1",
     "@nx/jest": "16.0.1",
     "@nx/linter": "16.0.1",
