Update API Dockerfile

--- a/.deploy/api/Dockerfile
+++ b/.deploy/api/Dockerfile
@@ -3,14 +3,15 @@ WORKDIR /app
 COPY . .
 
 # Remove the nx-cloud runner in order to not have to install it as a dependency
-RUN sed -i 's+@nrwl\/nx-cloud+nx\/tasks-runners\/default+g' nx.json
+RUN sed -i 's+@nx-cloud+nx\/tasks-runners\/default+g' nx.json
 # Remove the unnecessary Angular dependencies
 RUN sed -i '/angular/d' package.json
 
 # Install python because Mac M1 seems to be missing it
 RUN apk --no-cache add --virtual .builds-deps build-base python3
 RUN npm i --omit=dev
-RUN npm i @nrwl/devkit
+RUN npm i @nx/webpack
+
 
 RUN npx nx build api --configuration=production
 
