Pushing what I've done. Hopefully not nx/cache

--- a/apps/frontend/.eslintrc.json
+++ b/apps/frontend/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "extends": ["../../.eslintrc.json"],
-  "ignorePatterns": ["!**/*"],
+  "ignorePatterns": ["!**/*", "apps/frontend/src/environments/environment.ts"],
   "overrides": [
     {
       "files": ["*.ts"],
