--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "nx build",
     "build:api": "nx build api",
     "build:omnihost": "nx build frontend",
-    "test": "nx run-many --all --target=test",
+    "test": "nx run-many --all --target=test --verbose",
     "test:ci": "nx run-many --all --target=test --skip-nx-cache",
     "e2e": "npm run e2e:open",
     "e2e:open": "npm run e2e:frontend:open",
@@ -80,8 +80,8 @@
     "@angular/language-service": "~14.2.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
-    "@nx/cypress": "16.0.1",
     "@nrwl/eslint-plugin-nx": "16.0.3",
+    "@nx/cypress": "16.0.1",
     "@nx/eslint-plugin": "16.0.1",
     "@nx/jest": "16.0.1",
     "@nx/linter": "16.0.1",
@@ -92,6 +92,7 @@
     "@types/cron": "^2.0.0",
     "@types/express": "^4.17.14",
     "@types/file-saver": "^2.0.5",
+    "@types/jasmine": "^5.1.4",
     "@types/jest": "29.4.4",
     "@types/node": "18.7.1",
     "@types/passport-anonymous": "^1.0.3",
@@ -103,6 +104,7 @@
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "jasmine": "^3.0.0",
     "jest": "29.4.3",
     "jest-environment-jsdom": "29.4.3",
     "jest-preset-angular": "13.0.0",
